--- a/README.html
+++ b/README.html
@@ -124,9 +124,16 @@ $(document).ready(function () {
 </div>
 
 
-<div id="setr-script-development" class="section level1">
-<h1>SETr Script Development</h1>
-<p>This is the GitHub page where I’ll be developing scripts for the NERRS Science Collaborative project <em><strong>’Is marsh surface tracking sea level change? Developing tools and visualizations</strong></em> for NERRS Sentinel Site Data’. Stay tuned for more!</p>
+<div id="setr-script-development" class="section level3">
+<h3>SETr Script Development</h3>
+<p>This is the GitHub page for the development of scripts for the NERRS Science Collaborative-funded project <em><strong>‘Is marsh surface tracking sea level change? Developing tools and visualizations for NERRS Sentinel Site Data’</strong></em>.</p>
+<div id="important-links" class="section level4">
+<h4>Important Links</h4>
+<ul>
+<li>Sign up for our email lists through <a href="https://goo.gl/forms/CLWmBm2cexEhEhZt1">this Google form</a></li>
+</ul>
+<p>Stay tuned for more!</p>
+</div>
 </div>
 
 
