links added to github pages

--- a/README.html
+++ b/README.html
@@ -126,11 +126,24 @@ $(document).ready(function () {
 
 <div id="setr-script-development" class="section level3">
 <h3>SETr Script Development</h3>
-<p>This is the GitHub page for the development of scripts for the NERRS Science Collaborative-funded project <em><strong>‘Is marsh surface tracking sea level change? Developing tools and visualizations for NERRS Sentinel Site Data’</strong></em>.</p>
+<p>This page is the document hub and GitHub page for the development of scripts for the NERRS Science Collaborative-funded project <em><strong>‘Is marsh surface tracking sea level change? Developing tools and visualizations for NERRS Sentinel Site Data’</strong></em>.</p>
 <div id="important-links" class="section level4">
 <h4>Important Links</h4>
 <ul>
-<li>Sign up for our email lists through <a href="https://goo.gl/forms/CLWmBm2cexEhEhZt1">this Google form</a></li>
+<li>Sign up for our email lists through <a href="https://goo.gl/forms/CLWmBm2cexEhEhZt1">this Google form</a><br />
+</li>
+<li>Keep up with R code at <a href="https://swmpkim.github.io/SETr_script_development/">the GitHub repository</a><br />
+</li>
+<li>Check out these useful documents:
+<ul>
+<li><a href="https://www.jstatsoft.org/article/view/v059i10">Wickham 2014</a> - Tidy Data<br />
+</li>
+<li><a href="https://www.tandfonline.com/doi/abs/10.1080/00031305.2017.1375989">Broman and Woo 2018</a> - Data Organization in Spreadsheets<br />
+</li>
+<li><a href="https://irma.nps.gov/DataStore/Reference/Profile/2225005">Lynch et al. 2015</a> - NPS SET Monitoring Protocol<br />
+</li>
+</ul></li>
+<li>See the recording of the Kickoff Webinar (9/25/2018) - not uploaded yet, but it will be on the <a href="https://www.youtube.com/channel/UCD3m5hKRgMOWeNEe3ootrqA">Grand Bay NERR YouTube channel</a></li>
 </ul>
 <p>Stay tuned for more!</p>
 </div>
