added webinar links

--- a/README.html
+++ b/README.html
@@ -124,26 +124,29 @@ $(document).ready(function () {
 </div>
 
 
-<div id="setr-script-development" class="section level3">
-<h3>SETr Script Development</h3>
+<div id="setr-script-development" class="section level2">
+<h2>SETr Script Development</h2>
 <p>This page is the document hub and GitHub page for the development of scripts for the NERRS Science Collaborative-funded project <em><strong>‘Is marsh surface tracking sea level change? Developing tools and visualizations for NERRS Sentinel Site Data’</strong></em>.</p>
-<div id="important-links" class="section level4">
-<h4>Important Links</h4>
+<div id="important-project-links" class="section level3">
+<h3>Important Project Links</h3>
 <ul>
-<li>Sign up for our email lists through <a href="https://goo.gl/forms/CLWmBm2cexEhEhZt1">this Google form</a><br />
+<li><strong>Sign up for our email lists</strong> through <a href="https://goo.gl/forms/CLWmBm2cexEhEhZt1">this Google form</a><br />
 </li>
 <li>Keep up with R code at <a href="https://swmpkim.github.io/SETr_script_development/">the GitHub repository</a><br />
 </li>
-<li>Check out these useful documents:
+<li>Watch the <a href="https://youtu.be/Gc7YedK1Ek0">recording of the Kickoff Webinar</a> from 9/25/2018<br />
+</li>
+<li>See <a href="https://drive.google.com/file/d/1LIT80g_CfRJH2dKXbORHGesQy1uNUJP7/view?usp=sharing">slides from the Kickoff Webinar</a></li>
+</ul>
+</div>
+<div id="useful-references" class="section level3">
+<h3>Useful References</h3>
 <ul>
 <li><a href="https://www.jstatsoft.org/article/view/v059i10">Wickham 2014</a> - Tidy Data<br />
 </li>
 <li><a href="https://www.tandfonline.com/doi/abs/10.1080/00031305.2017.1375989">Broman and Woo 2018</a> - Data Organization in Spreadsheets<br />
 </li>
-<li><a href="https://irma.nps.gov/DataStore/Reference/Profile/2225005">Lynch et al. 2015</a> - NPS SET Monitoring Protocol<br />
-</li>
-</ul></li>
-<li>See the recording of the Kickoff Webinar (9/25/2018) - not uploaded yet, but it will be on the <a href="https://www.youtube.com/channel/UCD3m5hKRgMOWeNEe3ootrqA">Grand Bay NERR YouTube channel</a></li>
+<li><a href="https://irma.nps.gov/DataStore/Reference/Profile/2225005">Lynch et al. 2015</a> - NPS SET Monitoring Protocol</li>
 </ul>
 <p>Stay tuned for more!</p>
 </div>
